# quoriv

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_PLAN.md  README.md  SECURITY.md  config.example.toml  mkdocs.yml  pyinstaller.spec  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: binaries.yml  docs.yml  lint.yml  release.yml  test.yml
docs/: DEEPAGENTS_REFERENCE.md  architecture.md  index.md  project-plan.md  security.md
src/quoriv/: __init__.py  __main__.py  app.py  cli.py  eval.py  hooks.py  replay.py
src/quoriv/config/: __init__.py  keychain.py  loader.py  schema.py
src/quoriv/core/: __init__.py  agent.py  events.py  memory.py  persistence.py  subagents.py
src/quoriv/memory/: __init__.py
src/quoriv/models/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  ollama.py  openai.py  openrouter.py  vllm.py
src/quoriv/observability/: __init__.py  cost.py  telemetry.py  trace.py
src/quoriv/permissions/: __init__.py  allowlist.py  guard.py  modes.py  paths.py
src/quoriv/plugins/: __init__.py  loader.py
src/quoriv/plugins/mcp/: __init__.py  client.py
src/quoriv/repo/: __init__.py  ast.py  symbols.py
src/quoriv/tools/: __init__.py  ast_tools.py  git.py  tests.py  web.py
src/quoriv/ui/: __init__.py  diff.py  prompts.py  stream.py  themes.py
tests/: conftest.py
tests/integration/: test_e2e_stubbed_chat.py
tests/unit/: test_app_decisions.py  test_app_slash.py  test_binaries_workflow.py  test_cli.py  test_docs_setup.py  test_eval.py  test_eval_runner.py  test_hooks.py  test_release_workflow.py  test_replay.py
tests/unit/config/: test_keychain.py  test_loader.py  test_schema.py
tests/unit/core/: test_agent.py  test_events.py  test_memory.py  test_persistence.py  test_subagents.py
tests/unit/models/: test_anthropic.py  test_base.py  test_factory.py  test_fallbacks.py  test_gemini.py  test_ollama.py  test_openai.py  test_openrouter.py  test_vllm.py
tests/unit/observability/: test_cost.py  test_telemetry.py  test_trace.py
tests/unit/permissions/: test_allowlist.py  test_guard.py  test_modes.py  test_paths.py
tests/unit/plugins/: test_loader.py  test_mcp_client.py  test_mcp_schema.py
tests/unit/repo/: test_ast.py  test_symbols.py
tests/unit/tools/: test_ast_tools.py  test_git.py  test_runner.py  test_web.py
tests/unit/ui/: test_diff.py  test_prompts.py  test_stream.py  test_themes.py
