[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "quoriv"
version = "0.0.1"
description = "Open-source terminal AI coding agent with multi-model support (OpenAI, Anthropic, Gemini, Ollama, vLLM)."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Burhan Hussain", email = "BurhanHussain1@users.noreply.github.com" },
]
keywords = [
    "ai",
    "agent",
    "coding-agent",
    "cli",
    "llm",
    "deepagents",
    "langgraph",
    "developer-tools",
    "openai",
    "anthropic",
    "ollama",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
    "Typing :: Typed",
]

# --------------------------------------------------------------------------
# Core runtime dependencies (Phase 1 baseline)
# --------------------------------------------------------------------------
dependencies = [
    # Agent runtime
    "deepagents>=0.0.1",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-openai>=0.2.0",

    # Terminal UI
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.43",
    "typer>=0.12.0",

    # Config + data
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "keyring>=25.0.0",
    "aiosqlite>=0.20.0",

    # Plumbing
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "loguru>=0.7.0",
]

# --------------------------------------------------------------------------
# Optional dependency groups (installed on demand)
# --------------------------------------------------------------------------
[project.optional-dependencies]
# Tree-sitter AST tools (Phase 1)
ast = [
    "tree-sitter>=0.22.0",
    "tree-sitter-languages>=1.10.2",
]

# MCP plugin support (Phase 2)
mcp = [
    "mcp>=1.0.0",
]

# Additional model providers (Phase 3)
anthropic = ["langchain-anthropic>=0.2.0"]
gemini = ["langchain-google-genai>=2.0.0"]
ollama = ["langchain-ollama>=0.2.0"]

# Bundle of all providers
all-providers = [
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
]

# Development tooling
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.0",
    "types-toml",
]

# Documentation
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]

# --------------------------------------------------------------------------
# Entry point: `quoriv` on the command line
# --------------------------------------------------------------------------
[project.scripts]
quoriv = "quoriv.cli:app"

# --------------------------------------------------------------------------
# Project URLs
# --------------------------------------------------------------------------
[project.urls]
Homepage      = "https://github.com/BurhanHussain1/quoriv"
Repository    = "https://github.com/BurhanHussain1/quoriv"
Issues        = "https://github.com/BurhanHussain1/quoriv/issues"
Changelog     = "https://github.com/BurhanHussain1/quoriv/blob/main/CHANGELOG.md"
Documentation = "https://github.com/BurhanHussain1/quoriv#readme"

# --------------------------------------------------------------------------
# Hatchling build configuration
# --------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/quoriv"]

[tool.hatch.build.targets.sdist]
include = [
    "src/quoriv",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

# --------------------------------------------------------------------------
# Ruff (lint + format)
# --------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PL",  # pylint
]
ignore = [
    "PLR0913", # too many arguments — agent code legitimately needs many
    "PLR2004", # magic value comparisons — false-positive heavy
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PLR2004", # magic value comparisons (intentional in tests)
    "S101",    # assert use (the whole point of tests)
    "TCH",     # type-checking imports — tests freely mix runtime/type uses
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --------------------------------------------------------------------------
# Mypy (type checking)
# --------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
files = ["src/quoriv"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "deepagents.*",
    "langchain.*",
    "langgraph.*",
    "tree_sitter.*",
    "tree_sitter_languages.*",
]
ignore_missing_imports = true

# --------------------------------------------------------------------------
# Pytest
# --------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring network/model access",
]

# --------------------------------------------------------------------------
# Coverage
# --------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/quoriv"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
